# sist

./: .gitignore  AGENTS.md  README.md  TODO.md  gradlew  gradlew.bat  settings.gradle
api-server/: .env.example  .env.production  .gitignore  README.md  package-lock.json  package.json
api-server/sql/: schema.mysql.sql
api-server/src/: admin-auth.ts  config.ts  db.ts  index.ts  object-storage.ts
api-server/storage/: db.json
apps/app_store/: App.tsx  README.md  app.json  package-lock.json  package.json
apps/app_store_mock/: App.tsx  app.json  metro.config.js  package-lock.json  package.json
apps/core_dpc/: PROVISIONING.md  README.md  build.gradle
apps/integrate_test/: build.gradle  proguard-rules.pro
apps/launcher/: build.gradle  proguard-rules.pro
apps/manager/: STEP1_INSTALL_DPM_AUDIT.md  build.gradle  proguard-rules.pro
apps/pe-board/: App.tsx  README.md  app.json  package-lock.json  package.json
protocol/: streaming_protocol.md
python/ai_box_server/: .dockerignore  Dockerfile  README.md  build_image.sh  docker-compose.yml  pyproject.toml  start.sh  stop.sh  upload_image.sh
python/ai_box_server/src/ai_box_server/: server.py  stand_hold_server.py
python/make-skeleton/: .gitignore  README.md  pyproject.toml
python/make-skeleton/input/: 1.mov  2.mov  3.mov  test.mov
python/make-skeleton/src/make_skeleton/: __init__.py  __main__.py  pipeline.py
python/make-skeleton/src/make_skeleton.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
web-admin/: .env.example  README.md  index.html  package-lock.json
(+233 files in other folders)
