[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-box-server"
version = "0.1.0"
description = "AI BOX TCP server for Sistrun Dance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26.0",
  "opencv-python>=4.9.0"
]

[project.optional-dependencies]
pose = [
  "mediapipe>=0.10.14"
]

[project.scripts]
ai-box-server = "ai_box_server.__main__:main"
ai-box-stand-hold-server = "ai_box_server.stand_hold_server:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
